			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04a: *********************************

IMP: (09/28/05, DN) Transactional DB: ImmutableArcInst and ImmutableNodeInst are subclasses of ImmutableElectricObject.

BUG: (09/28/05, GVG) KeyBindings are not cached if preferences are imported. Export/Import
as new button names in Preferences (Bug #578)
FIX: Calling MenuBar.restoreSavedBindings(false) in Preferences.

BUG: (09/27/05, DN) Spice (Epic) waveform viewer cross-probing broken down in hierarchy.
FIX: In io.input.EpicOut.readEpicFile add "removeLeadingX()" to strip 'x' from Epic names.

BUG: (09/27/05, DN) "Spice.segmentedNets.PortInstComparator.compare" doesn't obey the contract for "compare".
FIX: Compare NodeInsts of PortInsts first.

BUG: (09/27/05, DN) Compaction regression fails.
FIX: In constraint.LayoutCell replace "arcModified" by "arcMoved", so that change of bits doesn't lock arc.

BUG: (09/27/05, DN) NullPointerExceptions in BATCH mode.
FIX: In WindowFrame.createEditWindow insert "if (Main.BATCHMODE) return null;"

BUG: (09/27/05, DN) NullPointerException in TextUtils.formatDouble.
FIX: In TextUtils.formatDouble change numberFormatPostFix to numberFormatSpecific.

BUG: (09/27/05, DN) Icons should be always be expanded cells/instances (Bug #570)
FIX: In Cell.isWantExpanded() and NodeInst.setExpanded() ensure that icon instances are always expanded.

IMP: (09/27/05, DN) Branch "version8-03-stable" was created from tag "version8-03.h".
     The main branch has version number "8.04a".

BUG: (09/26/05, GVG) Changes in the code to be able to run regressions without setting the environment variable DISPLAY (bug 197).
FIX: Decouple messages stream from messages window. Regressions updated.

BUG: (09/26/05, RK) Bug: Node Info dialog has MoCMOS polysilicon resistors width and length swapped. (Bugzilla# 574)
